updated dao to actually work

--- a/config/application-development.yml
+++ b/config/application-development.yml
@@ -47,18 +47,18 @@ database:
   # whether or not idle connections should be validated
     checkConnectionWhileIdle: false
 
-logging:
-  level: INFO
-  appenders:
-    - type: file
-      currentLogFilename: C:/log/jdbc-instrumentation.log
-      threshold: ALL
-      archive: true
-      archivedLogFilenamePattern: C:/log/jdbc-instrumentation-%d.log
-      archivedFileCount: 5
-      timeZone: UTC
-      #logFormat: "%-30(%d{HH:mm:ss.SSS} [%thread]) %-5level %logger{32} - %msg%n"
-    - type: console
-      threshold: ALL
-      timeZone: UTC
-      target: stdout
+#logging:
+#  level: INFO
+#  appenders:
+#    - type: file
+#      currentLogFilename: C:/log/jdbc-instrumentation.log
+#      threshold: ALL
+#      archive: true
+#      archivedLogFilenamePattern: C:/log/jdbc-instrumentation-%d.log
+#      archivedFileCount: 5
+#      timeZone: UTC
+#      #logFormat: "%-30(%d{HH:mm:ss.SSS} [%thread]) %-5level %logger{32} - %msg%n"
+#    - type: console
+#      threshold: ALL
+#      timeZone: UTC
+#      target: stdout
