--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
             <artifactId>comsat-dropwizard</artifactId>
             <version>${comsat.version}</version>
         </dependency>
-        <dependency>
-            <groupId>co.paralleluniverse</groupId>
-            <artifactId>comsat-jdbc</artifactId>
-            <version>${comsat.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>co.paralleluniverse</groupId>-->
+            <!--<artifactId>comsat-jdbc</artifactId>-->
+            <!--<version>${comsat.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>co.paralleluniverse</groupId>
             <artifactId>comsat-httpclient</artifactId>
@@ -67,7 +67,7 @@
             <artifactId>maven-shade-plugin</artifactId>
             <version>2.3</version>
             <configuration>
-                <createDependencyReducedPom>true</createDependencyReducedPom>
+                <createDependencyReducedPom>false</createDependencyReducedPom>
                 <filters>
                    <filter>
                         <artifact>*:*</artifact>
