--- a/pom.xml
+++ b/pom.xml
@@ -8,68 +8,77 @@
 <artifactId>jdbc-instrumentation</artifactId>
 <version>1.0-SNAPSHOT</version>
 
-<properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <dropwizard.version>0.8.3</dropwizard.version>
-    <comsat.version>0.5.0</comsat.version>
-    <capsule.maven.plugin.version>0.10.8</capsule.maven.plugin.version>
-    <capsule.daemon.version>0.1.0</capsule.daemon.version>
-</properties>
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <dropwizard.version>0.8.3</dropwizard.version>
+        <comsat.version>0.5.0</comsat.version>
+        <capsule.maven.plugin.version>0.10.8</capsule.maven.plugin.version>
+        <quasar.version>0.7.3</quasar.version>
+    </properties>
 
-<dependencies>
-    <dependency>
-        <groupId>co.paralleluniverse</groupId>
-        <artifactId>comsat-dropwizard</artifactId>
-        <version>${comsat.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-jersey</artifactId>
-        <version>${dropwizard.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>co.paralleluniverse</groupId>
-        <artifactId>quasar-core</artifactId>
-        <version>0.7.3</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.derby</groupId>
-        <artifactId>derby</artifactId>
-        <version>10.11.1.1</version>
-    </dependency>
-</dependencies>
-
-<build>
-    <plugins>
-        <plugin>
-            <groupId>com.github.chrischristo</groupId>
-            <artifactId>capsule-maven-plugin</artifactId>
-            <version>${capsule.maven.plugin.version}</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>build</goal>
-                    </goals>
-                    <configuration>
-                        <appClass>com.example.jdbc.base.JdbcInstrumentationApplication</appClass>
-                        <types>fat</types>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.6</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                    </manifest>
-                </archive>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
+    <dependencies>
+        <dependency>
+            <groupId>co.paralleluniverse</groupId>
+            <artifactId>comsat-dropwizard</artifactId>
+            <version>${comsat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jersey</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>co.paralleluniverse</groupId>
+            <artifactId>quasar-core</artifactId>
+            <version>${quasar.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.11.1.1</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.chrischristo</groupId>
+                <artifactId>capsule-maven-plugin</artifactId>
+                <version>${capsule.maven.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                        <configuration>
+                            <appClass>com.example.jdbc.base.JdbcInstrumentationApplication</appClass>
+                            <types>fat</types>
+                            <manifest>
+                                <entry>
+                                    <key>Premain-Class</key>
+                                    <value>Capsule</value>
+                                </entry>
+                                <entry>
+                                    <key>Java-Agents</key>
+                                    <value>co.paralleluniverse:quasar-core:${quasar.version}</value>
+                                </entry>
+                            </manifest>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
